Fix: attributes spacing sensitive to external CSS
The space around the attributes table can be accidentally modified by
external CSS. This fix specifies the margins and paddings to prevent
accidental spacing changes.

--- a/basic-style.css
+++ b/basic-style.css
@@ -89,11 +89,16 @@
   width: 100%;
   border-collapse: collapse;
   table-layout: fixed;
+  border-spacing: 0;
+  margin: 0.2em;
 }
 
 ::content table.ability-scores th, ::content table.ability-scores td {
   text-align: center;
   width: 50px;
+  min-width: 50px;
+  padding: 0;
+  vertical-align: middle;
 }
 
 ::content .traits-and-actions .stat-name {
